# core

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  RISK.md  backend_summary.md  implementation_plan.md  org_manager_campaign.py  pdfToMdComparison.md  populate.py  refactor_plan.md  removemelater.md  sonar-project.properties  sonar.properties  sync-to-repos.sh  text.csv  todo.md  users.csv
api/: .dockerignore  .env.dev.example  .env.example  .env.prod.example  Dockerfile  Dockerfile.dev  README.md  TODO.md  fetch_defaults.py  output.txt  pyproject.toml  reproduce_issue.py  sonar-project.properties  sonar.properties
api/scripts/: migrate_file_storage.py  run_report.py
api/src/: main.py
api/src/core/: admin.py  db.py  dependencies.py  deps.py  mongo.py  object_storage.py  org_manager.py  risk_config.py  security.py  settings.py
api/src/models/: MODULE_SCHEMA.md  __init__.py  campaign.py  compliance.py  compliance_schemas.py  content.py  custom_header.py  email_sending.py  email_template.py  feature.py  group.py  landing_page.py  landing_page_template.py  module.py  org_manager_schemas.py  phishing_kit.py  realm.py  remediation.py  sending_profile.py  tenant.py  tenant_compliance.py  user.py  user_group.py
api/src/models/campaign/: __init__.py  schemas.py  table.py
api/src/models/compliance/: __init__.py  table.py
api/src/models/course/: __init__.py  document.py
api/src/models/email_sending/: __init__.py  schemas.py  table.py
api/src/models/email_template/: __init__.py  table.py
api/src/models/landing_page/: __init__.py  table.py
api/src/models/module/: __init__.py  document.py  schemas.py
api/src/models/org_manager/: __init__.py  schemas.py
api/src/models/phishing_kit/: __init__.py  schemas.py  table.py
api/src/models/realm/: __init__.py  schemas.py  table.py
api/src/models/realm_risk_configuration/: __init__.py  schemas.py  table.py
api/src/models/user/: table.py  (+2 more)
api/src/resources/: __init__.py  compliance.md
api/src/routers/: admin.py  campaign.py  certificates.py  compliance.py  content.py  courses.py  modules.py  org_manager.py  phishing.py  phishing_kit.py  progress.py  realm.py  sending_profile.py  survey.py  templates.py  tracking.py  user.py
api/src/services/: admin.py  campaign.py  compliance_defaults.py  compliance_store.py  content.py  courses.py  keycloak_client.py  modules.py  org_manager.py  pdf_to_markdown.py  phishing_kit.py  progress.py  rabbit.py  realm.py  realm_risk_configuration.py  realm_template.json  risk.py  sending_profile.py  survey.py  templates.py  tracking.py
api/src/tasks/: __init__.py  scheduler.py  tracking_consumer.py
api/src/utils/: token.py
api/test/: conftest.py  test_certificate_endpoints.py  test_compliance_token_helpers.py  test_course_endpoints.py  test_org_manager_user_endpoints.py  test_realm_routes.py  test_realm_user_routes.py  test_survey_routes.py  test_tracking_consumer.py  test_tracking_endpoints.py
api/test/service/: campaign.py  test_sending_profile.py
api/test/services/: test_campaign_handler.py  test_course_service.py  test_email_handler.py  test_keycloak_admin_coverage.py  test_keycloak_client_coverage.py  test_platform_admin_user_handler.py  test_progress_service.py  test_quiz_handler.py  test_risk_service.py  test_sending_profile.py  test_stats_handler.py  test_survey_service.py  test_user_handler.py
api/test/tasks/: conftest.py  test_scheduler.py
smtp/: .dockerignore  .env.example  .env.prod.example  Dockerfile  README.md  main.py  pyproject.toml  sonar.properties
smtp/src/: consumer.py  rate_limiter.py
smtp/src/core/: __init__.py  config.py
smtp/src/emails/: __init__.py  email_sender.py  template_renderer.py
smtp/src/models/: __init__.py  message.py
smtp/templates/: email_notas.html  idp_template.html  test_template.html
(+656 files in other folders)
