[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.119.0",
    "psycopg[binary,pool]>=3.2.11",
    "sqlmodel>=0.0.27",
    "PyJWT>=2.9.0",
    "requests>=2.31.0",
    "motor>=3.6.0",
    "apscheduler>=3.10.0",
    "pika>=1.3.0",
    "pypdf",
    "cryptography>=46.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = [".", "src"]
