[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api"
version = "0.1.0"
description = "Core API for PEI-SecureLearning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.119.0",
    "psycopg[binary,pool]>=3.2.11",
    "sqlmodel>=0.0.27",
    "PyJWT>=2.9.0",
    "requests>=2.31.0",
    "motor>=3.6.0",
    "boto3>=1.39.0",
    "apscheduler>=3.10.0",
    "pika>=1.3.0",
    "pypdf",
    "cryptography>=46.0.3",
    "prometheus-fastapi-instrumentator>=0.9.0",
    "weasyprint>=68.1",
    "markdown>=3.10.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
indent-width = 2
src = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = [".", "src"]
addopts = "--cov=src --cov-report=html --cov-report=xml"

[tool.coverage.run]
source = ["src"]
omit = [
    "**/__init__.py",    
    "src/models/*",      
    "src/core/*",        
    "src/main.py",       
    "src/api/egg-info/*",
    "test/*",            
]

[tool.coverage.report]
show_missing = true
